--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+:root{
+    --violet: hsl(257, 40%, 49%);
+    --softMagenta: hsl(300, 69%, 71%);
+    color: white;
+}
+
 *, *::after, *::before{
     box-sizing: border-box;
     margin: 0;
@@ -9,34 +15,71 @@ body{
     background-repeat: no-repeat;
     width: 100dvw;
     height: 100dvh;
-    background-color: aquamarine;
+    background-color: var(--violet);
 }
 
-main{
+main {
     width: 100%;
     height: 100%;
-    border: 2px solid green;
+}
+
+.imageContainer {
+    width: 100%;
+    height: 50%;
+}
+
+.heroImage {
+    width: 80%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem auto 0rem;
 }
 
 #illustrationMockups {
+    display: block;
     width: 100%;
     height: 100%;
-    display: block;
+    margin: 2.75rem auto;
 }
 
-.imageContainer{
-    width: 100%;
-    height: 50%;
-    border: 1px solid red;
+#huddleLogo {
+    display: block;
+    width: 35%;
+    margin: 1rem 1.75rem 2rem;
 }
 
 .infoContainer {
     width: 100%;
     height: 50%;
-    border: 1px solid blue;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     text-align: center;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.infoContainer h1 {
+    width: 75%;
+    font-size: 1.625rem;
+    margin: 1rem auto;
+}
+
+.infoContainer p {
+    border: 1px solid white;
+    font-size: 1.125rem;
+    line-height: 1.375;
+    width: 77%;
+    text-align: center;
+}
+
+button {
+    border-radius: 1.5rem;
+    margin: 1rem;
+    padding: 0.875rem;
+    width: 55%;
+    border: none;
+    box-shadow: 0rem 0.064rem 0.25rem black;
+    color: var(--violet);
 }
