--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body{
 }
 
 main {
-    width: 100%;
-    height: 100%;
+    width: 100dvw;
+    height: 100dvh;
 }
 
 .imageContainer {
@@ -67,7 +67,6 @@ main {
 }
 
 .infoContainer p {
-    border: 1px solid white;
     font-size: 1.125rem;
     line-height: 1.375;
     width: 77%;
@@ -82,4 +81,26 @@ button {
     border: none;
     box-shadow: 0rem 0.064rem 0.25rem black;
     color: var(--violet);
+}
+
+.socialMediaIcons {
+    display: flex;
+    margin: 1rem auto 2rem;
+}
+
+.socialMediaIcons li {
+    list-style-type: none;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    margin: 1rem 0.375rem;
+    border-radius: 1rem;
+    font-size: 0.8rem;
+}
+
+footer {
+    display: none;
 }
