--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     --violet: hsl(257, 40%, 49%);
     --softMagenta: hsl(300, 69%, 71%);
     color: white;
+    font-family: "Open Sans", sans-serif;
+    font-style: normal;
 }
 
 *, *::after, *::before{
@@ -16,11 +18,18 @@ body{
     width: 100dvw;
     height: 100dvh;
     background-color: var(--violet);
+    overflow: hidden;
 }
 
 main {
     width: 100dvw;
     height: fit-content;
+}
+
+#huddleLogo {
+    display: block;
+    width: 35%;
+    margin: 2rem;
 }
 
 .imageContainer {
@@ -34,7 +43,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0rem auto 0rem;
+    margin: 3.75rem auto;
 }
 
 #illustrationMockups {
@@ -42,12 +51,6 @@ main {
     width: 100%;
     height: 100%;
     margin: 0rem auto;
-}
-
-#huddleLogo {
-    display: block;
-    width: 35%;
-    margin: 0rem 1.75rem;
 }
 
 .infoContainer {
@@ -62,30 +65,39 @@ main {
 
 .infoContainer h1 {
     width: 75%;
-    font-size: 1.625rem;
-    margin: 0rem auto;
+    font-size: 1.5rem;
+    line-height: 1.25;
+    margin: 0rem auto 0.5rem;
+    font-weight: 600;
 }
 
 .infoContainer p {
-    font-size: 1.125rem;
-    line-height: 1.375;
-    width: 77%;
+    font-size: 0.875rem;
+    line-height: 1.5;
+    width: 70%;
+    letter-spacing: 0.5px;
     text-align: center;
+    font-weight: 350;
+    margin: 0.5rem auto 1.5rem;
 }
 
 button {
     border-radius: 1.5rem;
-    margin: 0rem;
+    margin: 0rem auto;
     padding: 0.875rem;
     width: 55%;
     border: none;
     box-shadow: 0rem 0.064rem 0.25rem black;
     color: var(--violet);
+    font-family: "Open Sans", sans-serif;
+    font-size: 0.75rem;
+    letter-spacing: 0.75px;
+    font-weight: 450;
 }
 
 .socialMediaIcons {
     display: flex;
-    margin: 0rem auto 0rem;
+    margin: 2rem auto;
 }
 
 .socialMediaIcons li {
