--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ body{
     width: 100dvw;
     height: 100dvh;
     background-color: var(--violet);
-    overflow: hidden;
 }
 
 main {
@@ -28,8 +27,8 @@ main {
 
 #huddleLogo {
     display: block;
-    width: 35%;
-    margin: 2rem;
+    width: 30%;
+    margin: 1.25rem 1.875rem 1rem;
 }
 
 .imageContainer {
@@ -43,7 +42,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 3.75rem auto;
+    margin: 2rem auto;
 }
 
 #illustrationMockups {
