--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 body{
     background-image: url(./images/bg-mobile.svg);
     background-repeat: no-repeat;
+    background-size: auto;
+    background-position: 0% -10%;
     width: 100dvw;
     height: 100dvh;
     background-color: var(--violet);
